Bug 79832 - Removed accounts from plugin were never actually removed
Summary: Removed accounts from plugin were never actually removed
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: mission-control (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Telepathy bugs list
QA Contact: Telepathy bugs list
URL:
Whiteboard:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2014-06-09 10:38 UTC by Guillaume Desmottes
Modified: 2014-06-10 14:07 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
mcd-storage: actually remove deleted accounts (931 bytes, patch)
2014-06-09 10:39 UTC, Guillaume Desmottes
Details | Splinter Review

Description Guillaume Desmottes 2014-06-09 10:38:19 UTC
I was trying to reproduce bug #79827 with MC and Empathy master and hit this issue:

(process:9041): mc-plugins-DEBUG: account-storage.c:1147: goa: gabble/jabber/goa_google_account_1384426078
(process:9041): mcd-DEBUG: deleted_cb: goa reported deletion of gabble/jabber/goa_google_account_1384426078 (0x95d3d0)
(process:9041): mcd-DEBUG: unref_account: called for gabble/jabber/goa_google_account_1384426078
(process:9041): mcd-DEBUG: mcd_account_delete_async: emitting Account.Removed for gabble/jabber/goa_google_account_1384426078
(process:9041): mc-plugins-DEBUG: account-storage.c:1147: goa: gabble/jabber/goa_facebook_account_1377685019
(process:9041): mcd-DEBUG: deleted_cb: goa reported deletion of gabble/jabber/goa_facebook_account_1377685019 (0x95d280)
(process:9041): mcd-DEBUG: unref_account: called for gabble/jabber/goa_facebook_account_1377685019
(process:9041): mcd-DEBUG: mcd_account_changed_property: called: Enabled
(process:9041): mcd-DEBUG: mcd_account_changed_property: First changed property
(process:9041): mcd-DEBUG: mcd_account_delete_async: emitting Account.Removed for gabble/jabber/goa_facebook_account_1377685019
(process:9041): mc-plugins-DEBUG: account-storage.c:1114: goa: gabble/jabber/goa_facebook_account_1377685019

(process:9041): mcd-WARNING **: created_cb: account gabble/jabber/goa_facebook_account_1377685019 already exists in plugin 'goa', cannot create for plugin 'goa'
(process:9041): mc-plugins-DEBUG: account-storage.c:1114: goa: gabble/jabber/goa_google_account_1384426078

(process:9041): mcd-WARNING **: created_cb: account gabble/jabber/goa_google_account_1384426078 already exists in plugin 'goa', cannot create for plugin 'goa'

The old account was never removed preventing the new one (from the GOA restart) to be created.
Comment 1 Guillaume Desmottes 2014-06-09 10:39:27 UTC
Created attachment 100720 [details] [review]
mcd-storage: actually remove deleted accounts
Comment 2 Simon McVittie 2014-06-09 10:44:57 UTC
Which MC version?
Comment 3 Guillaume Desmottes 2014-06-09 10:45:48 UTC
(In reply to comment #2)
> Which MC version?

master
Comment 4 Simon McVittie 2014-06-10 10:55:44 UTC
Comment on attachment 100720 [details] [review]
mcd-storage: actually remove deleted accounts

Review of attachment 100720 [details] [review]:
-----------------------------------------------------------------

r+
Comment 5 Guillaume Desmottes 2014-06-10 14:07:22 UTC
Merged to master for 5.17.0; doesn't apply for 5.16.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.