mcd-storage: actually remove deleted accounts

https://bugs.freedesktop.org/show_bug.cgi?id=79832